[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pymfm"
authors = [
    {name = "Amir Ahmadifar", email = "aahmadifar@eonerc.rwth-aachen.de"},
    {name = "Florian Oppermann", email = "florian.oppermann@eonerc.rwth-aachen.de"},
    {name = "Aytug Yavuzer", email = "aytug.yavuzer@eonerc.rwth-aachen.de"},
]
description = "TODO: add package description"
readme = "README.md"
requires-python = ">=3.8"
keywords = []
classifiers = []
dependencies = ["pandas==1.5.3",
                "pyomo==6.5.0",
                "matplotlib==3.7.1",
                "scipy==1.11.0",
                "xlsxwriter==3.1.2",
                "pydantic==1.10.9",
                "astral==3.2",]
version = "0.0.5"
